<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Log console -->
        <Button
            android:id="@+id/button_log"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="logConsole"
            android:text="@string/button_log"/>

        <!-- Toast alert -->
        <Button
            android:id="@+id/button_simple_toast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="simpleToastAlert"
            android:text="@string/button_simple_toast"/>

        <Button
            android:id="@+id/button_position_toast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="positionToastAlert"
            android:text="@string/button_position_toast"/>

        <Button
            android:id="@+id/button_custom_toast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="customToastAlert"
            android:text="@string/button_custom_toast"/>

        <Button
            android:id="@+id/button_simple_dialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="simpleAlertDialog"
            android:text="@string/button_simple_dialog"/>

        <Button
            android:id="@+id/button_progress_dialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="progressDialog"
            android:text="@string/button_progress_dialog"/>

        <Button
            android:id="@+id/button_list_dialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="listDialog"
            android:text="@string/button_list_dialog"/>

        <Button
            android:id="@+id/button_custom_layout_dialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="customDialog"
            android:text="@string/button_custom_layout_dialog"/>

        <Button
            android:id="@+id/button_date_picker_dialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="datePickerDialog"
            android:text="@string/button_date_picker_dialog"/>

    </LinearLayout>
</ScrollView>
